--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -9,24 +9,32 @@
 				</button>
 				<a class="navbar-brand" href="#" style="color:white;">Attendance App</a>
 			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav">
-					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Courses<span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Page 1-1</a></li>
-							<li><a href="#">Page 1-2</a></li>
-							<li><a href="#">Page 1-3</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Students</a></li>
-					<li><a href="#">Sessions</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-				</ul>
+			
+				<div class="collapse navbar-collapse" id="myNavbar" appDropdown>
+					<ul class="nav navbar-nav">
+
+						<!-- This is an example of a dropdown menu provided by bootstrap.js and jQuery
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Courses<span class="caret"></span></a>
+							
+								<ul class="dropdown-menu">
+									<li><a href="#">Page 1-1</a></li>
+									<li><a href="#">Page 1-2</a></li>
+									<li><a href="#">Page 1-3</a></li>
+								</ul>
+							
+						</li>
+						-->
+
+						<li><a routerLink="/courses">Courses</a></li>
+						<li><a href="#">Students</a></li>
+						<li><a href="#">Sessions</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+					</ul>
+				</div>
 			</div>
-		</div>
 	</nav>
 </div>
