--- a/ClientApp/app/components/courses/course-list/course-list.component.html
+++ b/ClientApp/app/components/courses/course-list/course-list.component.html
@@ -1,12 +1,13 @@
 
 <div class="row">
-  <div class="col-xs-12" *ngIf="courses.length != 0">
+  <div class="col-xs-12">
     <button class="btn btn-success" routerLink="/courses/0/new">New Course</button>
     <hr>
-    <app-course-item
-      *ngFor="let cl of courses; let i = index;"
-      [course]="cl"
-    ></app-course-item>
+	<div *ngIf="courses.length != 0">
+    <app-course-item *ngFor="let cl of courses; let i = index;" 
+		[course]="cl"
+		></app-course-item>
+	</div>
   </div>
 </div>
 
